--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,8 +6,8 @@
   "commit": false,
 
   "contributorsPerLine": 7,
-  "projectName": "oloquinho",
-  "projectOwner": "oloquinho",
+  "projectName": "desceprabc",
+  "projectOwner": "desceprabc",
   "repoType": "github",
   "repoHost": "https://github.com"
 }
